# nmu-npol

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  GNUmakefile  LICENSE.md  Makefile  Npolapp.cc  Npolapp.cc~  README.md  README.old  STATUS.md  ToDoList.md  cleanBuild  init.mac  issues.txt  npol.mac  npol.mac~  setuprun.sh  vis.mac
ROOTscripts/: Chain_Ntuple_Load.C  Get_Volume_IDs.cc  NpolTest.C  Single_Ntuple_Load.C
analysis/: CMakeLists.txt
analysis/envscripts/: ClusterAnalysis.sh  JLABsetupAnalysis.csh  JLABsetupAnalysis2.csh  NMUnpolVariables.sh  NMUsetupAnalysis.sh  NMUsetupAnalysis2.sh
analysis/include/: NpolEventPreProcessing.hh  NpolEventProcessing.hh  NpolFileEnvManager.hh  NpolHistoManager.hh  NpolPhysicsVariables.hh
analysis/scripts/: CleanOutBadFiles.cxx  EDepSum.cxx  ExtractParticleDistributions.cxx  FrontAnalyzerCountRateOverlay.cxx  FrontDetectorCountRates.cxx  FrontTaggerCountRates.cxx  FrontVetoCountRateOverlay.cxx  JLABscanRunCommands.csh  JLABscanjob.csh  MultiJobSubmit.sh  NMUjobSubmit.sh  NMUjobanalysis.sh  NpolCombineHistos.cxx  NpolDetectorCountRates.cxx  NpolEffHistos.cxx  NpolHistos.cc  PEjobsubmit.sh  PEjobsubmit2.sh  ProcessElectrons.cxx  SimulationFigures.cxx
analysis/src/: NpolAnalysis.cc  NpolEfficiency.cc  NpolEventPreProcessing.cc  NpolEventProcessing.cc  NpolFileEnvManager.cc  NpolHistoManager.cc  NpolPhysicsVariables.cc  dEoverE.cc  dEoverEJLAB.cc  test.cc
analysis2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
analysis2/envscripts/: ClusterAnalysis.sh  JLABsetupAnalysis.csh  NMUsetupAnalysis.sh
analysis2/include/: NpolDetectorEvent.hh  NpolStep.hh
analysis2/scripts/: BasicTemplate.cxx  EstimateCrossSection.cxx  ExtractParticleDistributions.cxx  FrontDetectorCountRates.cxx  FrontTaggerCountRates.cxx  JLABscanjob.csh  MakeNpolClasses.sh  NMUjobanalysis.sh
analysis2/src/: NpolProcessEvents.cc
env_setup/: ClusterAnalysis.sh  JLABsetupAnalysis.csh
gdml/: BeamDump.gdml  HBender.gdml  no_beampipe_no_target.gdml
include/: .NpolHit.hh.swp  A01PrimaryGeneratorAction.hh~  AnalysisManager.hh  CellParameterisation.hh  ChamberParameterisation.hh  DetectorConstMessenger.hh  DetectorConstruction.hh  DetectorConstruction.hh~  DetectorMessenger.hh  DriftChamber.hh  DriftChamberHit.hh  EMPhysics.hh  EmCalorimeter.hh  EmCalorimeterHit.hh  EventAction.hh  ExN02DetectorConstruction.hh~  ExN02MagneticField.hh  GeneralPhysics.hh  HadCalorimeter.hh  HadCalorimeterHit.hh  HadronPhysics.hh  Hodoscope.hh  HodoscopeHit.hh  IonPhysics.hh  MagneticField.hh  MagneticFieldMessenger.hh  MuonPhysics.hh  NMUHit.hh  NMUSensitiveDetector.hh  NMUTrajectory.hh  (+54 more)
npollib/: CMakeLists.txt
npollib/include/: NpolDetectorEvent.hh  NpolStep.hh  NpolTagger.hh  NpolVertex.hh
simulation/: CMakeLists.txt
simulation/gdml/: BeamDump.gdml  HBender.gdml
simulation/include/: JGenFermiMomentum.h  JGenPhaseSpace.h  NpolActionInitialization.hh  NpolAnalysisManager.hh  NpolBDump.hh  NpolBeamLineBlocker.hh  NpolBeamlineUpper.hh  NpolDetectorConstruction.hh  NpolDetectorFactory.hh  NpolDipole1.hh  NpolDipole2.hh  NpolEventAction.hh  NpolFileManager.hh  NpolHBender.hh  NpolHallShell.hh  NpolLeadCurtain.hh  NpolParticleFluxTagger.hh  NpolPhysicsList.hh  NpolPolarimeter.hh  NpolPolarimeter6Layer.hh  NpolPrimaryGeneratorAction.hh  NpolPrimaryGeneratorMessenger.hh  NpolScatteringChamber.hh  NpolShieldHut.hh  NpolTarget.hh  NpolTrackingAction.hh  NpolWorld.hh
simulation/macros/: ElectronBeam.mac  NeutronBeam.mac  ParticleFlux.mac  ParticleFluxElectron.mac  ParticleFluxGamma.mac  ParticleFluxMuon+.mac  ParticleFluxMuon-.mac  ParticleFluxNeutron.mac  ParticleFluxPion+.mac  ParticleFluxPion-.mac  ParticleFluxPositron.mac  ParticleFluxProton.mac  PointSource.mac  RunEventGenerator.mac  init.mac  init_vis.mac  npol.mac  vis.mac
simulation/macros/Run11GeV/: ParticleFluxElectron.mac  ParticleFluxGamma.mac  ParticleFluxMuon+.mac  ParticleFluxMuon-.mac  ParticleFluxNeutron.mac  ParticleFluxPion+.mac  ParticleFluxPion-.mac  ParticleFluxPositron.mac  ParticleFluxProton.mac
simulation/macros/Run4.4GeV/: ParticleFluxElectron.mac  ParticleFluxGamma.mac  ParticleFluxMuon+.mac  ParticleFluxMuon-.mac  ParticleFluxNeutron.mac  ParticleFluxPion+.mac  ParticleFluxPion-.mac  ParticleFluxPositron.mac  ParticleFluxProton.mac  ParticleFluxQENeutron.mac  QENeutron.mac
simulation/npol_doc/: npol_doc.aux  npol_doc.dvi  npol_doc.tex
simulation/npol_doc/figures/: geometry.eps
simulation/scripts/: JLABAnalysisRunCommands.csh  JLABjobscript.csh  JLABscanRunCommands.csh  JLABsetupRun.csh  JLABsimRunCommands.csh  NMUjobsubmit.sh  NMUsetupAnalysis.sh  NMUsetuprun.sh  PEjobsubmit.sh  qsubmitNpol.sh
simulation/scripts/JLABBatchFarm/: JLABAnalysisRunCommands.csh  JLABanalysisSubmit.csh  JLABcancel.csh  JLABjobscript.csh  JLABsetupRun.csh  JLABsimRunCommands.csh  JLABsimSubmit.csh
simulation/scripts/NMUCluster/: ClusterRunSetup.sh  qNpolElectron.sh  qNpolGamma.sh  qNpolMuon+.sh  qNpolMuon-.sh  qNpolNeutron.sh  qNpolPion+.sh  qNpolPion-.sh  qNpolPositron.sh  qNpolProton.sh  qQENeutron.sh  qsubmitNpol.sh
simulation/scripts/NMUPhysics/: MultiJobRun.sh  NMUjobsubmit.sh  NMUjobsubmitElectron.sh  NMUjobsubmitGamma.sh  NMUjobsubmitMuon+.sh  NMUjobsubmitMuon-.sh  NMUjobsubmitNeutron.sh  NMUjobsubmitNeutronBeam.sh  NMUjobsubmitPion+.sh  NMUjobsubmitPion-.sh  NMUjobsubmitPositron.sh  NMUjobsubmitProton.sh  NMUjobsubmitQENeutron.sh  NMUsetuprun.sh
simulation/src/: JGenFermiMomentum.cc  JGenPhaseSpace.cc  NpolActionInitialization.cc  NpolAnalysisManager.cc  NpolBDump.cc  NpolBeamLineBlocker.cc  NpolBeamlineDown.cc  NpolBeamlineUpper.cc  NpolDetectorConstruction.cc  NpolDetectorFactory.cc  NpolDipole1.cc  NpolDipole2.cc  NpolEventAction.cc  NpolHBender.cc  NpolLeadCurtain.cc  NpolMaterials.cc  NpolParticleFluxTagger.cc  NpolPhysicsList.cc  NpolPolarimeter.cc  NpolPolarimeter6Layer.cc  NpolPrimaryGeneratorAction.cc  NpolPrimaryGeneratorMessenger.cc  NpolRunAction.cc  NpolScatteringChamber.cc  NpolShieldHut.cc  NpolSteppingAction.cc  NpolTarget.cc  NpolTrackingAction.cc  NpolWorld.cc  Npolapp.cc
(+110 files in other folders)
